--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="http://localhost:8097"></script>
     <title>EarthQuesTion</title>
   </head>
   <body>
